--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,88 +1,49 @@
-<h1>
-  List of all students
-</h1>
+<h1>List of all students</h1>
 
 <hr>
 
 <form action="/insert_student" method="post">
   <div>
-    <label for="email_box">
-      Email
-    </label>
-
+    <label for="email_box">Email:</label>
     <input type="text" id="email_box" name="query_email">
   </div>
 
   <div>
-    <label for="first_name_box">
-      First name
-    </label>
-
-    <input type="text" id="first_name_box" name="query_name">
+    <label for="first_name_box">First name:</label>
+    <input type="text" id="first_name_box" name="query_first_name">
   </div>
 
   <div>
-    <label for="last_name_box">
-      Last name
-    </label>
-
+    <label for="last_name_box">Last name:</label>
     <input type="text" id="last_name_box" name="query_last_name">
   </div>
 
-  <button>
-    Create student
-  </button>
+  <button type="submit">Create student</button>
 </form>
 
 <hr>
 
-<table class="table" border="1" >
-  <tr>
-    <th>
-      ID
-    </th>
-
-    <th>
-      First name
-    </th>
-
-    <th>
-      Last name
-    </th>
-
-    <th>
-      Email
-    </th>
-
-    <th>
-    </th>
-  </tr>
-
-  <% @students.eac do |student| %>
+<table class="table" border="1">
+  <thead>
     <tr>
-      <td>
-        <%= student.id %>
-      </td>
-
-      <td>
-        <%= student.first_name %>
-      </td>
-
-      <td>
-        <%= student.last_name %>
-      </td>
-
-      <td>
-        <%= student.email %>
-      </td>
-
-      <td>
-        <a href="/students/<%= student %>">
-          Show details
-        </a>
-      </td>
+      <th scope="col">ID</th>
+      <th scope="col">First name</th>
+      <th scope="col">Last name</th>
+      <th scope="col">Email</th>
+      <th scope="col"></th>
     </tr>
-  <% end %>
+  </thead>
+  <tbody>
+    <% @students.each do |student| %>
+      <tr>
+        <td><%= student.id %></td>
+        <td><%= student.first_name %></td>
+        <td><%= student.last_name %></td>
+        <td><%= student.email %></td>
+        <td><a href="/students/<%= student.id %>">Show details</a></td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
 <hr>
